--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 10:54:00 AM</p>
+    <p class="lastupdate">09/07/2020 10:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">57.6&#176;F</td>
+        <td class="data">57.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">35%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.794 inHg (-0.020)</td>
+        <td class="data">29.792 inHg (-0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.7&#176;F</td>
+        <td class="data">82.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:53:24 AM">
-            87.9</span><br/>
+          <span title="10:57:30 AM">
+            88.4</span><br/>
           <span title="07:29:05 AM">
             67.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:53:24 AM" class="hival">
-            87.9</span>
+          <span title="10:57:30 AM" class="hival">
+            88.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:53:52 AM">
-            57.6</span><br/>
+          <span title="10:54:36 AM">
+            57.7</span><br/>
           <span title="12:11:05 AM">
             50.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:53:52 AM (Monday)">
-            57.6</span><br/>
+          <span title="10:54:36 AM (Monday)">
+            57.7</span><br/>
           <span title="04:59:20 PM (Sunday)">
             43.3</span>
         </td>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="10:36:24 AM">
-            4</span><br/>
-          26
+          <span title="10:54:18 AM">
+            5</span><br/>
+          0
         </td>
         <td class="data new_row hilo_week">
           <span title="12:26:08 PM (Sunday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
           1</td>
         <td class="data new_row hilo_month">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          360
+          0
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 20 hours, 7 minutes</td>
+      <td class="data">5 days, 20 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 20 hours, 7 minutes</td>
+      <td class="data">5 days, 20 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
